// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Peer Edit Panel should be able to generate a new peering 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -89,11 +89,11 @@
              >
                <input
                  class=\\"rs-input\\"
                  name=\\"peerList.panels.name\\"
                  type=\\"text\\"
-                 value=\\"\\"
+                 value=\\"something peer name\\"
                />
              </div>
            </div>
            <div
              class=\\"rs-form-group\\"
@@ -109,11 +109,11 @@
              >
                <input
                  class=\\"rs-input\\"
                  name=\\"peerList.panels.URL\\"
                  type=\\"text\\"
-                 value=\\"\\"
+                 value=\\"https://host-url.ch/\\"
                />
              </div>
            </div>
            <div
              class=\\"rs-form-group\\"
@@ -129,18 +129,17 @@
              >
                <input
                  class=\\"rs-input\\"
                  name=\\"peerList.panels.token\\"
                  type=\\"text\\"
-                 value=\\"\\"
+                 value=\\"abc123def456\\"
                />
              </div>
            </div>
            <button
-             aria-disabled=\\"true\\"
-             class=\\"fetchButton rs-btn rs-btn-primary rs-btn-disabled\\"
-             disabled=\\"\\"
+             aria-disabled=\\"false\\"
+             class=\\"fetchButton rs-btn rs-btn-primary\\"
              type=\\"button\\"
            >
              peerList.panels.getRemote
              <span
                class=\\"rs-ripple-pond\\""
`;

exports[`Peer Edit Panel should render 1`] = `
<DocumentFragment>
  <div
    class="rs-drawer-header"
  >
    <span
      aria-label="Close"
      class="rs-drawer-header-close rs-btn-close"
      role="button"
      title="Close"
    >
      <svg
        aria-hidden="true"
        aria-label="close"
        class="rs-icon"
        data-category="application"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
        />
      </svg>
    </span>
    <h4
      class="rs-drawer-title"
    >
      peerList.panels.createPeer
    </h4>
    <div
      class="rs-drawer-actions"
    >
      <button
        aria-disabled="false"
        class="rs-btn rs-btn-primary"
        type="button"
      >
        peerList.panels.create
        <span
          class="rs-ripple-pond"
        >
          <span
            class="rs-ripple"
          />
        </span>
      </button>
      <button
        class="rs-btn rs-btn-subtle"
        type="button"
      >
        peerList.panels.close
        <span
          class="rs-ripple-pond"
        >
          <span
            class="rs-ripple"
          />
        </span>
      </button>
    </div>
  </div>
  <div
    class="rs-drawer-body"
  >
    <div
      class="rs-panel"
    >
      <div
        class="rs-panel-body"
        role="region"
      >
        <form
          class="rs-form rs-form-vertical rs-form-fluid"
        >
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              peerList.panels.name*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="name"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              peerList.panels.URL*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="url"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              peerList.panels.token*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="token"
                type="text"
                value=""
              />
            </div>
          </div>
          <button
            class="fetchButton rs-btn rs-btn-primary"
            type="button"
          >
            peerList.panels.getRemote
            <span
              class="rs-ripple-pond"
            >
              <span
                class="rs-ripple"
              />
            </span>
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Peer Edit Panel should render with ID 1`] = `
<DocumentFragment>
  <div
    class="rs-drawer-header"
  >
    <span
      aria-label="Close"
      class="rs-drawer-header-close rs-btn-close"
      role="button"
      title="Close"
    >
      <svg
        aria-hidden="true"
        aria-label="close"
        class="rs-icon"
        data-category="application"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
        />
      </svg>
    </span>
    <h4
      class="rs-drawer-title"
    >
      peerList.panels.editPeer
    </h4>
    <div
      class="rs-drawer-actions"
    >
      <button
        aria-disabled="false"
        class="rs-btn rs-btn-primary"
        type="button"
      >
        peerList.panels.save
        <span
          class="rs-ripple-pond"
        >
          <span
            class="rs-ripple"
          />
        </span>
      </button>
      <button
        class="rs-btn rs-btn-subtle"
        type="button"
      >
        peerList.panels.close
        <span
          class="rs-ripple-pond"
        >
          <span
            class="rs-ripple"
          />
        </span>
      </button>
    </div>
  </div>
  <div
    class="rs-drawer-body"
  >
    <div
      class="rs-panel"
    >
      <div
        class="rs-panel-body"
        role="region"
      >
        <form
          class="rs-form rs-form-vertical rs-form-fluid"
        >
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              peerList.panels.name*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="name"
                type="text"
                value="Test Peer Name"
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              peerList.panels.URL*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="url"
                type="text"
                value="https://test-url.ch/"
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
            >
              peerList.panels.token*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                class="rs-input"
                name="token"
                placeholder="peerList.panels.leaveEmpty"
                type="text"
                value=""
              />
            </div>
          </div>
          <button
            class="fetchButton rs-btn rs-btn-primary"
            type="button"
          >
            peerList.panels.getRemote
            <span
              class="rs-ripple-pond"
            >
              <span
                class="rs-ripple"
              />
            </span>
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
